fix: remove cybersecurity page

--- a/src/_data/translation/ar.json
+++ b/src/_data/translation/ar.json
@@ -20,8 +20,7 @@
     "FundamentalsAndBasics": "الأساسيات والمبادئ",
     "GraphicDesign": "تصميم الجرافيك",
     "Frontend": "تدريب تطوير الويب",
-    "BackendDeve": "تطوير الواجهة الخلفية",
-    "Cybersecurity": "الأمن السيبراني"
+    "BackendDeve": "تطوير الواجهة الخلفية"
   },
   "HeroHome": {
     "title": "ابدأ مستقبلك البرمجي الآن وطور مهاراتك في البرمجة مع أكاديمية آجي نكوديو!",
