feat: add trainings to home page

--- a/src/_data/translation/ar.json
+++ b/src/_data/translation/ar.json
@@ -23,13 +23,12 @@
     "BackendDeve": "تطوير الواجهة الخلفية"
   },
   "HeroHome": {
-    "title": "ابدأ مستقبلك البرمجي الآن وطور مهاراتك في البرمجة مع أكاديمية آجي نكوديو!",
-    "subtitle": "اكتسب المهارات الرقمية التي تمكنك من تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مصممة بعناية لتواكب متطلبات سوق العمل. انضم إلينا لتتعلم على يد خبراء متميزين في المجال، وابدأ طريقك نحو مستقبل مهني ناجح!"    ,
-    "cta1": "أريد أن أتعلم",
-    "theytrustus": "وضعوا ثقتهم بنا"
+    "title": "إبدأ رحلتك في البرمجة الآن وطور مهاراتك مع أكاديمية آجي نكوديو",
+    "subtitle": "إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد",
+    "cta1": "أريد أن أتعلم"
   },
   "certification": {
-    "title":" افتح فرص جديدة في سوق الشغل"    ,
+    "title":" إفتح فرص جديدة في سوق الشغل"    ,
     "subtitle": "شهادتنا ليست فقط تأكيداً على مهاراتك وقدراتك، بل هي بوابتك لفتح فرص عمل جديدة وتحقيق تقدير أكبر في سوق العمل",
     "cta1": "أريد أن أتعلم"
   },  
@@ -127,30 +126,29 @@
     "Title": "تدريباتنا",
     "Trainings": [
       {
-        "link": "/ar/programming",
+        "link": "/ar/basics",
         "content": [
           {
-            "tags": ["Python", "Algorithm","Data Structure","Project Management","Soft-Skills"],
-            "title": "تدريب آجي نكوديو في البرمجة",
-            "desc": "اختصر الوقت وتعلم جميع أساسيات البرمجة عن طريق مشاريع تطبيقية، في تلاث أشهر فقط واحصل على شهادة معتمدة من أجل فتح فرص جديدة.",
-            "cta": "اكتشف المزيد",
-            "img":"/images/pythontraining.png"
-          }
+            "tags": ["programming basics", "coding best practices", "data structures", "algorithms", "SQL", "Java", "UML", "OOP", "design patterns"],
+            "title": "آجي تعلم أساسيات البرمجة و أفضل الممارسات",
+            "desc": "إبدأ رحلتك في البرمجة بتعلم أساسياتها وأفضل الممارسات عبر مشاريع تطبيقية. في 3 أشهر فقط، إحصل على شهادة معتمدة تساعدك في تحقيق أهدافك المهنية.",
+            "cta": "إبدأ الآن",
+            "img": ""
+          }          
         ]
       },
       {
-        "link": "/ar/data",
+        "link": "/ar/backend",
         "content": [
           {
-            "tags": ["Python", "Data Analysis","Machine Learning","Data Visualization"],
-            "title": "تدريب آجي نكوديو في تحليل البيانات",
-            "desc": "اختصر الوقت وتعلم جميع أساسيات تحليل البيانات عن طريق مشاريع تطبيقية،واحصل على شهادة معتمدة من أجل فتح فرص جديدة.",
-            "cta": "اكتشف المزيد",
-            "img":"/images/pythontraining.png"
+            "tags": ["Java advanced", "Rest API", "Spring Boot", "MySQL", "JPA", "Microservices", "Monolith", "Docker", "Spring Cloud", "Spring Security"],
+            "title": "تدريب آجي نكوديو في تطوير الواجهة الخلفية",
+            "desc": "تعرف على كيفية تطوير حلول البرمجة المتقدمة وتحسين مهاراتك في إنشاء أنظمة مخصصة ومرنة باستخدام أحدث تقنيات الواجهة الخلفية.",
+            "cta": "إبدأ الآن",
+            "img": ""
           }
         ]
-      }
-      
+      }      
     ]
   },
   "Certification": {
@@ -210,11 +208,6 @@
       "Socials": "تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.",
       "CTA": "هل أنتم مستعدون للانطلاق في رحلة التعلم والنمو؟"
   },
-
-
-
-
-
   "FAQPython": {
     "title": "أسئلة متكررة",
     "list": [
