--- a/src/_data/translation/en.json
+++ b/src/_data/translation/en.json
@@ -176,28 +176,28 @@
         "title": "قيمنا",
         "content": [
           {
-            "title": "الاختصاص",
-            "icon":"bolt",
-            "content": "نسعى إلى التفوق في كل ما نقوم به، من خلال تقديم تجارب تعلم عالية الجودة والمبتكرة والعملية."
+            "title": "التميز",
+            "icon": "bolt",
+            "content": "نسعى لتحقيق أعلى مستويات التفوق من خلال تقديم تجارب تعليمية مبتكرة، عالية الجودة، وذات طابع عملي."
           },
           {
-            "title": "الدعم",
-            "icon":"hand",
-            "content": "نحن أكثر من مجرد أكاديمية؛ نحن مجتمع. نحن نشجع على بيئة داعمة وتعاونية حيث يتم سماع كل صوت ويتم الاحتفال بكل نجاح."
+            "title": "التآزر",
+            "icon": "hand",
+            "content": "نحن أكثر من مجرد أكاديمية؛ نحن مجتمع يدعم أعضاؤه بعضهم البعض في بيئة تعاونية ومشجعة، حيث يتم تقدير كل رأي والاحتفاء بكل إنجاز."
           },
           {
-            "title": "النمو",
-            "icon":"rocket",
-            "content": "نحن متحمسون للتعلم والنمو. نحن نؤمن بإمكانية كل طالب لدينا ونلتزم بتنمية هذه الإمكانية."
+            "title": "التطور",
+            "icon": "rocket",
+            "content": "شغفنا التعلم والنمو الدائم. نؤمن بإمكانيات طلابنا ونعمل على مساعدتهم لتحقيق أقصى ما يمكنهم."
           },
           {
-            "title": "النزاهة",
-            "icon":"shield",
-            "content": "نؤمن بفضيلة فعل ما هو صحيح. نحن ملتزمون بالتصرف بشفافية وأمانة وأصالة."
+            "title": "الأمانة",
+            "icon": "shield",
+            "content": "نلتزم بفعل الصواب دائمًا، مع الحرص على الشفافية، النزاهة، والأصالة في كل ما نقوم به."
           }
         ]
       },
-      "Socials": "تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.",
+    "Socials": "تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.",
       "CTA": "هل أنتم مستعدون للانطلاق في رحلة التعلم والنمو؟"
   },
   "FAQPython": {
