feat: update text

--- a/src/_data/translation/ar.json
+++ b/src/_data/translation/ar.json
@@ -17,8 +17,7 @@
     "Home": "الرئيسية",
     "Trainings": "تدريبات",
     "Aboutus": "من نحن",
-    "FundamentalsAndBasics": "الأساسيات والمبادئ",
-    "BackendDeve": "تطوير الواجهة الخلفية"
+    "FundamentalsAndBasics": "الأساسيات والمبادئ"
   },
   "HeroHome": {
     "title": "إبدأ رحلتك في البرمجة الآن وطور مهاراتك مع أكاديمية آجي نكوديو",
@@ -271,7 +270,6 @@
         "title": "خريجي المعلوميات",
         "goal": "الهدف : تطوير مهاراتك",
         "goals": [
-          "إضافة بايثون إلى سيرتك ذاتية",
           "الحصول على شهادة معتمدة"
         ]
       },
