--- a/src/_data/translation/ar.json
+++ b/src/_data/translation/ar.json
@@ -17,8 +17,12 @@
     "Home": "الرئيسية",
     "Trainings": "تدريبات",
     "Aboutus": "من نحن",
-    "FundamentalsAndBasics": "الأساسيات والمبادئ",
-    "BackendDeve": "تطوير الواجهة الخلفية"
+    "BackendDeve": "تطوير الواجهة الخلفية",
+    "FrontendDeve": "تطوير الواجهة الأمامية",
+    "FullStackDeve": "تطوير الويب المتكامل",
+    "DesignGraphic": "تصميم الجرافيك",
+    "UiUx": "تصميم واجهات المستخدم وتجربة المستخدم",
+    "SpecialTraining": "تدريب خاص"
   },
   "HeroHome": {
     "title": "إبدأ رحلتك في البرمجة الآن وطور مهاراتك مع أكاديمية آجي نكوديو",
