feat: implements backend training page

--- a/src/_data/translation/ar.json
+++ b/src/_data/translation/ar.json
@@ -17,12 +17,7 @@
     "Home": "الرئيسية",
     "Trainings": "تدريبات",
     "Aboutus": "من نحن",
-    "BackendDeve": "تطوير الواجهة الخلفية",
-    "FrontendDeve": "تطوير الواجهة الأمامية",
-    "FullStackDeve": "تطوير الويب المتكامل",
-    "DesignGraphic": "تصميم الجرافيك",
-    "UiUx": "تصميم واجهات المستخدم وتجربة المستخدم",
-    "SpecialTraining": "تدريب خاص"
+    "BackendDeve": "تطوير الواجهة الخلفية"
   },
   "HeroHome": {
     "title": "إبدأ رحلتك في البرمجة الآن وطور مهاراتك مع أكاديمية آجي نكوديو",
